--- a/assignment9solution.ipynb
+++ b/assignment9solution.ipynb
@@ -62,13 +62,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,16 +101,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the Binary number 1010\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "binary =input(\"enter the Binary number \")\n",
+    "decimal,j= 0,-1\n",
+    "for i in range(0,len(binary)):\n",
+    "    decimal = decimal+(int(binary[j])*2**i)\n",
+    "    j+=-1\n",
+    "print(decimal)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.\tProgram to find the sum of numbers entered"
+    "# 5.\tProgram to find the sum of numbers entered"
    ]
   },
   {
@@ -148,10 +157,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the value of n1 4\n",
+      "enter the value of n2 4\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = int(input(\"enter the value of n1 \"))\n",
+    "n2 = int(input(\"enter the value of n2 \"))\n",
+    "multiply = 0\n",
+    "for  i in range(n2):\n",
+    "    multiply=multiply+n1\n",
+    "print(multiply)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -834,10 +860,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the number 21\n",
+      "it is fiboncic number \n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input(\"enter the number \"))\n",
+    "def checkfibonacic(n):\n",
+    "    if str((5*n**2-4)**0.5)[-2] =='.':\n",
+    "        return \"it is fibonacic number \"\n",
+    "    elif str((5*n**2+4)**0.5)[-2] =='.':\n",
+    "        return 'it is fiboncic number '\n",
+    "    else:\n",
+    "        return \"not a fibonacic number \"\n",
+    "print(checkfibonacic(number))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -873,12 +918,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the number 5\n",
+      "*   *   *   *   *   \n",
+      "  *   *   *   *   * \n",
+      "*   *   *   *   *   \n",
+      "  *   *   *   *   * \n",
+      "*   *   *   *   *   \n"
+     ]
+    }
+   ],
+   "source": [
+    "number  = int(input(\"enter the number \"))\n",
+    "for row in range(number):\n",
+    "    for col in range(number):\n",
+    "        if row%2==0:\n",
+    "            print(\"*  \",end=\" \")\n",
+    "        else:\n",
+    "            print(\"  *\",end= \" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "number  = int(input(\"enter the number \"))\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
